# DMS_ir

./: CMakeLists.txt  README.md
User-information/: CMakeCache.txt  name.txt
include/ncnn/: platform.h
lib/pkgconfig/: ncnn.pc
model/: ncnncols.param  y70000-opt.param
src/: .main.cpp.swp  main.cpp  mobilefacenet.cpp  mobilefacenet.h
